--- a/_posts/2019-12-16-stumbled.md
+++ b/_posts/2019-12-16-stumbled.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: roadmap.sh를 봐버렸다 | Stumbled into roadmap.sh
+title: roadmap.sh를 봐버렸다
 ---
 
 [roadmap.sh/devops](https://roadmap.sh/devops)
@@ -31,3 +31,5 @@ _"어떻게 된 것인지 모르겠지만 이 사이트를 찾고야 말았다"_
 대학교 1학년 때 C로 테트리스 만드는 과제가 주어졌을 때 처럼
 
 그 때 처럼 나는 이 다이어그램을 Divide & Conquer 해버릴 것이다.
+
+2019-12-16
