--- a/_posts/2019-12-23-now_I_know.md
+++ b/_posts/2019-12-23-now_I_know.md
@@ -5,7 +5,19 @@ title: 19년말 지금 나는 뭘 아나?
 
 > 월.요.일.조.아
 
-크리스마스 주에는 일이 별로 없다. 그래서 오늘은 잠시 블로그를 써봐도 될것만 같다. 오늘은 저번에 봤던 roadmap에서 **대체 난 뭘 아나?**를 알아볼 것이다.
+크리스마스 주에는 일이 별로 없다. 그래서 오늘은 잠시 블로그를 써봐도 될것만 같다. 
+오늘은 저번에 봤던 roadmap에서 **대체 난 뭘 아나?**를 알아볼 것이다.
 
 ## 1. Learn a Programming Language
 ![section1]({{site.baseurl}}/images/section1.PNG)
+프로그래밍 컨셉에 대해서 이해를 한다!가 핵심이라면
+'나는 C++과 Node.JS를 통해서 프로그래밍 컨셉을 이해했음'이라고 이야기 할 것 같다.
+
+나에게 있어 C++은 프로그래밍 자체, Node.JS는 프로그래밍 언어 컨셉에 가깝다.
+
+- C++에서 class를 엄청 많이 써서 OO(Object Oriented)컨셉을 배웠다기 보다는 [백준](https://www.acmicpc.net/user/gongtuigigi)에서 문제를 풀면서 데이터 구조와 알고리즘등 '프로그래밍' 에 대해서 배웠다.
+- NodeJS를 가지고 Angular로 프론트 개발이나 Express서버 개발을 해보면서, 다른 이상한 언어랑 다르게 프로토타입을 기반으로 한 OO(?), 비동기 방식등 이상한 컨셉을 이해할 수 있었다.
+
+이정도면 되려나 모르겠다. 일단 앞으로도 두 언어로 계속 알고리즘 풀고 개발할 에정이니 더 채워 질듯 ㅎ
+
+## 2. Understand Different OS Concept
